# lite

./: CMakeLists.txt
src/: CMakeLists.txt
src/api/: CMakeLists.txt
src/lib/lua52/: CMakeLists.txt
src/lib/stb/: CMakeLists.txt
winlib/SDL2-2.0.10/: CMakeLists.txt
